@@ -290,3 +290,5 @@ help.menu=about
 
 main.toolbar=start-processes reset-processes stop-processes - stop save-results - options
 editor.toolbar=new-file open-file save-file close-file - choose-directory set-script distribute-files -
+
+editor.filetree.popupmenu=open-file set-script
